# RUSThello

./: .gitignore  Cargo.toml  LICENSE  README.md
ai_brute/: Cargo.toml
ai_brute/src/: ai_brute.rs  main.rs
ai_brute_mt/: Cargo.toml
ai_brute_mt/src/: ai_brute_mt.rs  main.rs
ai_composite/: Cargo.toml
ai_composite/src/: main.rs
ai_composite/src/ai_composite/: endgame.rs  midgame.rs  mod.rs  opening.rs
ai_heavy/: Cargo.toml
ai_heavy/src/: ai_heavy.rs  main.rs
ai_stable/: Cargo.toml
ai_stable/src/: ai_stable.rs  main.rs
benches/: benches.rs
rusthello/: Cargo.toml
rusthello/src/: main.rs
rusthello/src/interface/: human.rs  mod.rs
rusthello/src/opponents/: mod.rs
rusthello_game/: Cargo.toml
rusthello_game/src/: interface.rs  main.rs  opponents.rs
rusthello_lib/: Cargo.toml
rusthello_lib/src/: ai_interface.rs  game.rs  lib.rs  reversi.rs
src/: ai_player.rs  human_player.rs  interface.rs  lib.rs  main.rs
src/game/: mod.rs
src/interface/: human.rs  mod.rs
src/opponents/: ai_brute.rs  ai_brute_mt.rs  ai_heavy.rs  mod.rs
src/player/: mod-prob.rs
src/tests/: benches.rs  mod.rs  test_ai.rs  tests.rs
tests/: ai.rs
tests/test_ai/: mod.rs
